--- a/notebooks/lv/logics/surface_identification_logic.ipynb
+++ b/notebooks/lv/logics/surface_identification_logic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,16 +40,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "FILE_PATH = \"C:/Users/igorp/University of South Florida/Wenbin Mao - Igor/LV_Meshes/Heart_models/Full_Heart_Mesh_1.vtk\""
+    "FILE_PATH = \"C:/Users/igornobrega/USF_Research/University of South Florida/Wenbin Mao - Igor/LV_Meshes/Heart_models/Full_Heart_Mesh_1.vtk\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
        "</td></tr> </table>"
       ],
       "text/plain": [
-       "PolyData (0x16bc94772e0)\n",
+       "PolyData (0x255e5120c40)\n",
        "  N Cells:\t104390\n",
        "  N Points:\t52193\n",
        "  X Bounds:\t-2.362e+01, 6.196e+01\n",
@@ -98,7 +98,7 @@
        "  N Arrays:\t5"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
        "(52193, 3)"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
        "pyvista_ndarray([22.56839688,  0.14375042, -6.93471445])"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
        "3.141081162118487"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,13 +252,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "938a60f397304c1bbb800ba222a9f41d",
+       "model_id": "a90b6c0e506247b09e3c7a5a452583b5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,13 +308,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e3badacdc0eb4fba815301f15e1783d2",
+       "model_id": "6e1a3f40d708492f8b1b3094a31ac094",
        "version_major": 2,
        "version_minor": 0
       },
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,23 +363,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "kdist = np.linalg.norm(center - kcenters, axis=1)\n",
     "label = np.zeros(len(klabels))\n",
     "if kdist[0] < kdist[1]:\n",
-    "  label[klabels==0] = LV_SURFS.ATRIAL\n",
-    "  label[klabels==1] = LV_SURFS.MITRAL\n",
-    "else:\n",
+    "  label[klabels==0] = LV_SURFS.MITRAL\n",
     "  label[klabels==1] = LV_SURFS.ATRIAL\n",
-    "  label[klabels==0] = LV_SURFS.MITRAL"
+    "else:\n",
+    "  label[klabels==1] = LV_SURFS.MITRAL\n",
+    "  label[klabels==0] = LV_SURFS.ATRIAL"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,13 +391,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "16c12723f17542d597936f4f97e3f671",
+       "model_id": "0bb897e31ccd43fabe778d8d2b988d55",
        "version_major": 2,
        "version_minor": 0
       },
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,13 +434,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f8c8cc77697148478da963e39178dd38",
+       "model_id": "e778cae175244a5ea77c4f64facfeb12",
        "version_major": 2,
        "version_minor": 0
       },
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +502,7 @@
     "  d_mtr = np.linalg.norm(pts - c_mtr, axis=1)\n",
     "  \n",
     "  atr = np.where(d_atr <= r_atr * alpha_atr*0.8)[0]\n",
-    "  mtr = np.where(d_mtr <= r_mtr * alpha_mtr*0.8)[0]\n",
+    "  mtr = np.where(d_mtr <= r_mtr * alpha_mtr*0.77)[0]\n",
     "  \n",
     "  its = np.intersect1d(atr, mtr) # intersection\n",
     "  \n",
@@ -528,7 +528,6 @@
     "  mtr = new_mtr_mask[np.where(mtr_angles <= np.radians(89))[0]]\n",
     "  # ep1 = new_mtr_mask[np.where(mtr_angles > np.radians(89))[0]]\n",
     "  \n",
-    "  \n",
     "  new_guess = np.copy(endo_epi_guess)\n",
     "  # new_guess[ep1] = 6\n",
     "  new_guess[atr] = LV_SURFS.ATRIAL\n",
@@ -536,31 +535,44 @@
     "  new_guess[its] = LV_SURFS.INTERCECTION\n",
     "  \n",
     "  \n",
+    "  # adjust atrial region\n",
+    "  d_atr = np.linalg.norm(pts - c_atr, axis=1) \n",
+    "  near_atr = np.where(d_atr <= r_atr * alpha_atr)[0]\n",
+    "  atr_pts = pts[near_atr]\n",
+    "  atr_vecs = c_atr - atr_pts\n",
+    "  atr_angles = np.zeros(len(atr_vecs))\n",
+    "  for i, (pt_normal, pt_vec) in enumerate(zip(normals[near_atr], atr_vecs)):\n",
+    "    atr_angles[i] = angle_between(pt_vec, pt_normal, check_orientation=False)\n",
+    "  curr_vals = new_guess[near_atr]\n",
+    "  \n",
+    "  epi = near_atr[np.where((atr_angles > np.radians(90)) & (curr_vals!=LV_SURFS.MITRAL) & (curr_vals!=LV_SURFS.AM_INTERCECTION))[0]]\n",
+    "  \n",
+    "  new_guess[epi] = 1\n",
     "  \n",
     "  return new_guess, (c_atr, c_mtr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
     "mask, (c_atr, c_mtr) = est_mask(pts, initial_guess, endo_epi_guess, \n",
-    "                                alpha_atr=1.7, alpha_mtr=1.5)\n",
+    "                                alpha_atr=1.4, alpha_mtr=1.65)\n",
     "lvsurf.point_data[\"mask\"] = mask\n",
     "lvsurf.set_active_scalars(\"mask\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "130855486ae1483b848ef84f1a301963",
+       "model_id": "9c29f189b76c4e5ca4e7ecfaab0d093f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -612,7 +624,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.10"
   },
   "orig_nbformat": 4
  },
