--- a/notebooks/lv/tests/surface_identification_test.ipynb
+++ b/notebooks/lv/tests/surface_identification_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,49 +19,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir = Path(\"C:/Users/igorp/University of South Florida/Wenbin Mao - Igor/LV_Meshes/Heart_models\")\n",
+    "# dir = Path(\"C:/Users/igorp/University of South Florida/Wenbin Mao - Igor/LV_Meshes/Heart_models\")\n",
+    "dir = Path(\"C:/Users/igornobrega/USF_Research/University of South Florida/Wenbin Mao - Igor/LV_Meshes/Heart_models\")\n",
     "files = os.listdir(dir)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "File: Full_Heart_Mesh_17.vtk\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "43abbce3b0f141acaf86a379ccb81bdf",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Renderer(camera=PerspectiveCamera(aspect=1.3333333333333333, children=(DirectionalLight(color='#fefefe', posit…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "file_id = 8\n",
+    "file_id = 2\n",
     "\n",
     "print(\"File:\", files[file_id])\n",
     "\n",
     "lv = LV()\n",
     "lv.from_pyvista_read(dir/files[file_id], identifier=\"elemTag\", threshold=[0, 1])\n",
-    "lv.identify_surfaces()\n",
+    "lv.identify_surfaces(\n",
+    "  \n",
+    "  ab_ql=0.03, \n",
+    "  ab_qh=0.70,\n",
+    "  \n",
+    "  alpha_atr=0.5,  # coeff for radial distance computation\n",
+    "  alpha_mtr=0.5,\n",
+    "  beta_atr=0.9,  # coeff for second radial distance computation\n",
+    "  beta_mtr=0.9,\n",
+    "  gamma_atr=89,\n",
+    "  gamma_mtr=89,\n",
+    ")\n",
     "\n",
     "plotter = pv.Plotter(lighting='three lights')\n",
     "plotter.background_color = 'w'\n",
@@ -69,20 +59,23 @@
     "# plotter.add_mesh(lvsurf.arrows, lighting=False, scalars=\"angles\")\n",
     "# plotter.add_points(kcenters, color=\"red\", point_size=300)\n",
     "plotter.add_mesh(lv._surface_mesh, \n",
-    "                 scalars=\"LV_SURFS\", \n",
-    "                 cmap=\"Set2\", \n",
-    "                 opacity=1.0, \n",
-    "                 show_edges=False,\n",
-    "                 ambient=0.2, diffuse=0.5, specular=0.5, specular_power=90,\n",
-    "                #  smooth_shading=True,\n",
-    "                 )\n",
+    "                  scalars=\"LV_SURFS\", \n",
+    "                  cmap=\"Set2\", \n",
+    "                  opacity=1.0, \n",
+    "                  show_edges=False,\n",
+    "                  ambient=0.2, \n",
+    "                  diffuse=0.5, \n",
+    "                  specular=0.5, \n",
+    "                  specular_power=90,\n",
+    "                  #  smooth_shading=True,\n",
+    "                  )\n",
     "plotter.enable_shadows()\n",
     "plotter.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,39 +99,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Full_Heart_Mesh_1.vtk: 2.62872 [s]\n",
-      "Full_Heart_Mesh_10.vtk: 2.2422 [s]\n",
-      "Full_Heart_Mesh_11.vtk: 2.1248 [s]\n",
-      "Full_Heart_Mesh_12.vtk: 2.74798 [s]\n",
-      "Full_Heart_Mesh_13.vtk: 2.29151 [s]\n",
-      "Full_Heart_Mesh_14.vtk: 2.27154 [s]\n",
-      "Full_Heart_Mesh_15.vtk: 2.28991 [s]\n",
-      "Full_Heart_Mesh_16.vtk: 1.9532 [s]\n",
-      "Full_Heart_Mesh_17.vtk: 2.505 [s]\n",
-      "Full_Heart_Mesh_18.vtk: 2.26784 [s]\n",
-      "Full_Heart_Mesh_19.vtk: 2.49952 [s]\n",
-      "Full_Heart_Mesh_2.vtk: 2.60685 [s]\n",
-      "Full_Heart_Mesh_20.vtk: 2.40566 [s]\n",
-      "Full_Heart_Mesh_21.vtk: 2.2521 [s]\n",
-      "Full_Heart_Mesh_22.vtk: 2.23376 [s]\n",
-      "Full_Heart_Mesh_23.vtk: 2.19938 [s]\n",
-      "Full_Heart_Mesh_24.vtk: 2.36726 [s]\n",
-      "Full_Heart_Mesh_25.vtk: 2.179 [s]\n",
-      "Full_Heart_Mesh_3.vtk: 2.39682 [s]\n",
-      "Full_Heart_Mesh_4.vtk: 2.37421 [s]\n",
-      "Full_Heart_Mesh_5.vtk: 2.25622 [s]\n",
-      "Full_Heart_Mesh_6.vtk: 2.05368 [s]\n",
-      "Full_Heart_Mesh_7.vtk: 2.2759 [s]\n",
-      "Full_Heart_Mesh_8.vtk: 2.68372 [s]\n",
-      "Full_Heart_Mesh_9.vtk: 2.36577 [s]\n",
-      "Mean execution time: 2.3389 [s]\n"
+      "Full_Heart_Mesh_1.vtk: 2.34097 [s]\n",
+      "Full_Heart_Mesh_10.vtk: 2.01521 [s]\n",
+      "Full_Heart_Mesh_11.vtk: 2.06989 [s]\n",
+      "Full_Heart_Mesh_12.vtk: 2.46358 [s]\n",
+      "Full_Heart_Mesh_13.vtk: 2.2219 [s]\n",
+      "Full_Heart_Mesh_14.vtk: 2.10036 [s]\n",
+      "Full_Heart_Mesh_15.vtk: 2.25351 [s]\n",
+      "Full_Heart_Mesh_16.vtk: 1.80132 [s]\n"
      ]
     }
    ],
@@ -187,7 +162,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.10"
   },
   "orig_nbformat": 4
  },
