added json export format and minor adjustments

--- a/notebooks/lv/logics/surface_identification_logic.ipynb
+++ b/notebooks/lv/logics/surface_identification_logic.ipynb
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +233,7 @@
     "angles_tresh[angles<thresh_val]=0\n",
     "angles_tresh[angles>=thresh_val]=1\n",
     "\n",
-    "angles_tresh[angles>=np.radians(180)]=0\n",
+    "# angles_tresh[angles>=np.radians(180)]=0\n",
     "\n",
     "# angles_tresh[angles<np.radians(10)]=1\n",
     "\n",
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,13 +252,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a90b6c0e506247b09e3c7a5a452583b5",
+       "model_id": "c24c3415ab014b15bd82e3ac1e6c2f71",
        "version_major": 2,
        "version_minor": 0
       },
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,7 +545,7 @@
     "    atr_angles[i] = angle_between(pt_vec, pt_normal, check_orientation=False)\n",
     "  curr_vals = new_guess[near_atr]\n",
     "  \n",
-    "  epi = near_atr[np.where((atr_angles > np.radians(90)) & (curr_vals!=LV_SURFS.MITRAL) & (curr_vals!=LV_SURFS.AM_INTERCECTION))[0]]\n",
+    "  epi = near_atr[np.where((atr_angles > np.radians(90)) & ((curr_vals==LV_SURFS.ATRIAL) | (curr_vals==0)))[0]]\n",
     "  \n",
     "  new_guess[epi] = 1\n",
     "  \n",
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,13 +566,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9c29f189b76c4e5ca4e7ecfaab0d093f",
+       "model_id": "b081359e6f17453bac3f8404c57a0a36",
        "version_major": 2,
        "version_minor": 0
       },
