--- a/notebooks/lv/tests/surface_identification_test.ipynb
+++ b/notebooks/lv/tests/surface_identification_test.ipynb
@@ -30,9 +30,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File: Full_Heart_Mesh_11.vtk\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ff3aa44da9b344f684f71f7c0e20391c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Renderer(camera=PerspectiveCamera(aspect=1.3333333333333333, children=(DirectionalLight(color='#fefefe', posit…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "file_id = 2\n",
     "\n",
@@ -71,6 +93,63 @@
     "                  )\n",
     "plotter.enable_shadows()\n",
     "plotter.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'NODES': array([[ -3.87907733,  12.52942467, -19.55683257],\n",
+       "        [ -3.01636916,  13.5763117 , -19.82178605],\n",
+       "        [ -2.7924061 ,  12.583106  , -19.41994991],\n",
+       "        ...,\n",
+       "        [ 29.510462  , -38.928787  , -24.097198  ],\n",
+       "        [ 23.44714   , -25.526587  ,  15.682207  ],\n",
+       "        [ 21.786366  , -16.021004  , -45.794285  ]]),\n",
+       " 'ELEMENTS': {'TETRA': array([[    0,     1,     2,     3],\n",
+       "         [    4,     5,     6,     7],\n",
+       "         [    8,     9,    10,    11],\n",
+       "         ...,\n",
+       "         [72359, 72358, 50644, 72475],\n",
+       "         [50644, 50645, 72358, 50642],\n",
+       "         [50644, 72358, 50645, 72475]], dtype=int64)},\n",
+       " 'NODESETS': {'ENDO': array([    14,  74689,  51416, ..., 147819, 143164, 143163], dtype=int64),\n",
+       "  'AORTIC': array([    38,  27260,  44767, ..., 142515, 142131, 135242], dtype=int64),\n",
+       "  'MITRAL': array([    36, 119975,  31225, ..., 132048, 149154, 148776], dtype=int64),\n",
+       "  'AM_INTERCECTION': array([    36, 119975,  31225, ..., 142515, 142131, 148776], dtype=int64),\n",
+       "  'EPI': array([    36,     72,    106, ..., 149633, 149634, 149635], dtype=int64)},\n",
+       " 'ELEMTSETS': {},\n",
+       " 'SURFACES': {'ENDO': array([[ 38.19683  , -12.514311 , -38.131226 ],\n",
+       "         [ 38.199867 , -13.117596 , -38.300507 ],\n",
+       "         [ 38.778225 , -12.639633 , -37.95383  ],\n",
+       "         ...,\n",
+       "         [ 26.766836 , -24.471584 ,   2.66185  ],\n",
+       "         [ -2.4509246, -12.85931  ,  20.750103 ],\n",
+       "         [ -1.9756196, -12.537576 ,  20.564123 ]])},\n",
+       " 'VIRTUAL_NODES': {'AORTIC': array([-6.47376761,  0.74855032, 21.54372251]),\n",
+       "  'MITRAL': array([ 0.86791285, 23.74490742, 13.12976542])}}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lv.to_dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lv.to_json(\"test.json\")"
    ]
   },
   {
