--- a/notebooks/lv/tests/surface_identification_test.ipynb
+++ b/notebooks/lv/tests/surface_identification_test.ipynb
@@ -43,7 +43,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ff3aa44da9b344f684f71f7c0e20391c",
+       "model_id": "b9ed7e0fff204ac2ac4a5176dbc4af1a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -123,18 +123,270 @@
        "  'AM_INTERCECTION': array([    36, 119975,  31225, ..., 142515, 142131, 148776], dtype=int64),\n",
        "  'EPI': array([    36,     72,    106, ..., 149633, 149634, 149635], dtype=int64)},\n",
        " 'ELEMTSETS': {},\n",
-       " 'SURFACES': {'ENDO': array([[ 38.19683  , -12.514311 , -38.131226 ],\n",
-       "         [ 38.199867 , -13.117596 , -38.300507 ],\n",
-       "         [ 38.778225 , -12.639633 , -37.95383  ],\n",
-       "         ...,\n",
-       "         [ 26.766836 , -24.471584 ,   2.66185  ],\n",
-       "         [ -2.4509246, -12.85931  ,  20.750103 ],\n",
-       "         [ -1.9756196, -12.537576 ,  20.564123 ]])},\n",
+       " 'SURFACES': {'ENDO': {'TETRA': array([[    0,     1,     2,     3],\n",
+       "          [    4,     5,     6,     7],\n",
+       "          [    8,     9,    10,    11],\n",
+       "          ...,\n",
+       "          [72359, 72358, 50644, 72475],\n",
+       "          [50644, 50645, 72358, 50642],\n",
+       "          [50644, 72358, 50645, 72475]], dtype=int64)}},\n",
        " 'VIRTUAL_NODES': {'AORTIC': array([-6.47376761,  0.74855032, 21.54372251]),\n",
        "  'MITRAL': array([ 0.86791285, 23.74490742, 13.12976542])}}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lv_dict = lv.to_dict()\n",
+    "lv_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lv.to_json(\"test.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([    3,     0,     1, ..., 45566, 52040, 50469], dtype=int64)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lv._surface_mesh.faces"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "surf_to_global = lv._surface_mesh.point_data[\"vtkOriginalPointIds\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pyvista_ndarray([    14,  74689,  51416, ..., 143164, 143163, 144833],\n",
+       "                dtype=int64)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "surf_to_global"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "surf_to_global = dict()\n",
+    "for i, idx in enumerate(lv._surface_mesh.point_data[\"vtkOriginalPointIds\"]):\n",
+    "  surf_to_global[i] = idx\n",
+    "# surf_to_global"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[    0,     1,     2],\n",
+       "       [    0,     3,     4],\n",
+       "       [    0,     2,     3],\n",
+       "       ...,\n",
+       "       [52079, 20253, 50422],\n",
+       "       [45033, 51148, 35837],\n",
+       "       [45566, 52040, 50469]], dtype=int64)"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Y = lv._surface_mesh.faces.reshape(-1, 4)[:, 1:]\n",
+    "Y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[    14,  74689,  51416],\n",
+       "       [    14, 105300, 127012],\n",
+       "       [    14,  51416, 105300],\n",
+       "       ...,\n",
+       "       [148532, 149107, 149145],\n",
+       "       [148703, 149385, 148936],\n",
+       "       [148817, 149171, 149535]], dtype=int64)"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Y2 = Y.flatten()\n",
+    "for i, id in enumerate(Y2):\n",
+    "  Y2[i] = surf_to_global[id]\n",
+    "Y2 = Y2.reshape(-1,3)\n",
+    "Y2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([    14,  74689,  51416, ..., 147819, 143164, 143163], dtype=int64)"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X = lv_dict[\"NODESETS\"][\"ENDO\"]\n",
+    "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ True,  True,  True],\n",
+       "       [ True,  True,  True],\n",
+       "       [ True,  True,  True],\n",
+       "       ...,\n",
+       "       [ True,  True,  True],\n",
+       "       [ True,  True,  True],\n",
+       "       [ True,  True,  True]])"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "check = np.isin(Y2, X)\n",
+    "check"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = np.where(np.all(check == np.array([True, True, True]), axis=1))[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "surface = Y2[a]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lv._surfaces_oi[\"ENDO\"] = surface"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'NODES': array([[ -3.87907733,  12.52942467, -19.55683257],\n",
+       "        [ -3.01636916,  13.5763117 , -19.82178605],\n",
+       "        [ -2.7924061 ,  12.583106  , -19.41994991],\n",
+       "        ...,\n",
+       "        [ 29.510462  , -38.928787  , -24.097198  ],\n",
+       "        [ 23.44714   , -25.526587  ,  15.682207  ],\n",
+       "        [ 21.786366  , -16.021004  , -45.794285  ]]),\n",
+       " 'ELEMENTS': {'TETRA': array([[    0,     1,     2,     3],\n",
+       "         [    4,     5,     6,     7],\n",
+       "         [    8,     9,    10,    11],\n",
+       "         ...,\n",
+       "         [72359, 72358, 50644, 72475],\n",
+       "         [50644, 50645, 72358, 50642],\n",
+       "         [50644, 72358, 50645, 72475]], dtype=int64)},\n",
+       " 'NODESETS': {'ENDO': array([    14,  74689,  51416, ..., 147819, 143164, 143163], dtype=int64),\n",
+       "  'AORTIC': array([    38,  27260,  44767, ..., 142515, 142131, 135242], dtype=int64),\n",
+       "  'MITRAL': array([    36, 119975,  31225, ..., 132048, 149154, 148776], dtype=int64),\n",
+       "  'AM_INTERCECTION': array([    36, 119975,  31225, ..., 142515, 142131, 148776], dtype=int64),\n",
+       "  'EPI': array([    36,     72,    106, ..., 149633, 149634, 149635], dtype=int64)},\n",
+       " 'ELEMTSETS': {},\n",
+       " 'SURFACES': {'ENDO': array([[    14,  74689,  51416],\n",
+       "         [    14, 105300, 127012],\n",
+       "         [    14,  51416, 105300],\n",
+       "         ...,\n",
+       "         [148532, 149107, 149145],\n",
+       "         [148703, 149385, 148936],\n",
+       "         [148817, 149171, 149535]], dtype=int64)},\n",
+       " 'VIRTUAL_NODES': {'AORTIC': array([-6.47376761,  0.74855032, 21.54372251]),\n",
+       "  'MITRAL': array([ 0.86791285, 23.74490742, 13.12976542])}}"
+      ]
+     },
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,11 +397,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
-    "lv.to_json(\"test.json\")"
+    "lv.to_json(\"./test.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{10: array([[    0,     1,     2,     3],\n",
+       "        [    4,     5,     6,     7],\n",
+       "        [    8,     9,    10,    11],\n",
+       "        ...,\n",
+       "        [72359, 72358, 50644, 72475],\n",
+       "        [50644, 50645, 72358, 50642],\n",
+       "        [50644, 72358, 50645, 72475]], dtype=int64)}"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lv.mesh.cells_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(39811, 104390)"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(a), len(check)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lv._surface_mesh.faces"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\igornobrega\\Documents\\GitHub\\Project-Heart\\venv\\lib\\site-packages\\pyvista\\core\\dataset.py:1541: PyvistaDeprecationWarning: Use of `cell_arrays` is deprecated. Use `cell_data` instead.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "pyvista DataSetAttributes\n",
+       "Association     : CELL\n",
+       "Active Scalars  : elemTag\n",
+       "Active Vectors  : None\n",
+       "Active Texture  : None\n",
+       "Active Normals  : Normals\n",
+       "Contains arrays :\n",
+       "    elemTag                 int64    (104390,)            SCALARS\n",
+       "    vtkOriginalCellIds      int64    (104390,)\n",
+       "    Normals                 float32  (104390, 3)          NORMALS"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lv._surface_mesh.cell_arrays"
    ]
   },
   {
