--- a/notebooks/lv/logics/boundary_condition_with_mitral_and_aortic_valves.ipynb
+++ b/notebooks/lv/logics/boundary_condition_with_mitral_and_aortic_valves.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -45,13 +45,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "df494ff3420b4656a82ac1980dba2ddf",
+       "model_id": "5a5144e8afdf4b77bd201568974f556c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
        "{'R': 16.19505571655343, 'C': array([-1.5481617 , 25.68176791, 11.36415558])}"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
        "{'R': 14.923538134565778, 'C': array([-7.5238643 ,  3.63141074, 21.63932695])}"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +144,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "isinstance(lv.aortic_info[\"C\"], np.ndarray)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,13 +211,13 @@
     "                                   normal, cross_normal)\n",
     "  \n",
     "  \n",
-    "  rim_2 = np.copy(rim)\n",
-    "  for i, node in enumerate(rim):\n",
-    "    rim_2[i] = node + height*normal\n",
+    "  rim_2 = rim + height*normal\n",
+    "  # for i, node in enumerate(rim):\n",
+    "  #   rim_2[i] = node + height*normal\n",
     "  \n",
     "  # set rim center as mean from two centers\n",
-    "  rim_center_2 = c2#center + step_h*normal\n",
-    "  rim_center = np.mean([center, rim_center_2], axis=0)\n",
+    "  # rim_center_2 = c2#center + step_h*normal\n",
+    "  # rim_center = np.mean([center, rim_center_2], axis=0)\n",
     "  \n",
     "  # set elements\n",
     "  elements = []\n",
@@ -208,12 +228,12 @@
     "    ))\n",
     "  \n",
     "  rim = np.vstack([rim, rim_2])\n",
-    "  return rim, rim_center, elements"
+    "  return rim, center, elements"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,24 +318,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "n, _ = fit_plane(atr_pts)\n",
     "n = -n if n[2] < 0 else n\n",
-    "x = np.cross(n, lv._Z)\n",
+    "x = np.cross(n, lvnormal)\n",
     "c = lv.get_virtual_node(LV_VIRTUAL_NODES.AORTIC.value) + n*10\n",
     "r = lv.aortic_info[\"R\"] * 0.70\n",
     "h = 2\n",
-    "atr_rim, rim_center, rim_el = create_rim_circunference(c, r, h, -n, x)\n",
+    "atr_rim, atr_rim_center, rim_el = create_rim_circunference(c, r, h, -n, x)\n",
     "atr_rim_string_map = set_spring_indexes(atr_pts, atr_rim)\n",
     "atr_rim_string_lines = get_springs_pts_for_plot(atr_pts, atr_rim, atr_rim_string_map, n_skip=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,17 +354,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "n, _ = fit_plane(mtr_pts)\n",
     "n = -n if n[2] < 0 else n\n",
-    "x = np.cross(n, lv._Z)\n",
+    "x = np.cross(n, lvnormal)\n",
     "c = lv.get_virtual_node(LV_VIRTUAL_NODES.MITRAL.value) + n*10\n",
     "r = lv.mitral_info[\"R\"] * 0.70\n",
     "h = 2\n",
-    "mtr_rim, rim_center, rim_el = create_rim_circunference(c, r, h, -n, x)\n",
+    "mtr_rim, mtr_rim_center, rim_el = create_rim_circunference(c, r, h, -n, x)\n",
     "mtr_rim_string_map = set_spring_indexes(mtr_pts, mtr_rim)\n",
     "# mtr_rim_string_map = check_rim_neighbors(mtr_rim_string_map)\n",
     "mtr_rim_string_lines = get_springs_pts_for_plot(mtr_pts, mtr_rim, mtr_rim_string_map, n_skip=1)"
@@ -352,13 +372,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  0,  79],\n",
+       "       [  1,  80],\n",
+       "       [  2,  80],\n",
+       "       ...,\n",
+       "       [689,  67],\n",
+       "       [690,  67],\n",
+       "       [691,  67]], dtype=int64)"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mtr_rim_string_map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0, 64, 65, 1),\n",
+       " (1, 65, 66, 2),\n",
+       " (2, 66, 67, 3),\n",
+       " (3, 67, 68, 4),\n",
+       " (4, 68, 69, 5),\n",
+       " (5, 69, 70, 6),\n",
+       " (6, 70, 71, 7),\n",
+       " (7, 71, 72, 8),\n",
+       " (8, 72, 73, 9),\n",
+       " (9, 73, 74, 10),\n",
+       " (10, 74, 75, 11),\n",
+       " (11, 75, 76, 12),\n",
+       " (12, 76, 77, 13),\n",
+       " (13, 77, 78, 14),\n",
+       " (14, 78, 79, 15),\n",
+       " (15, 79, 80, 16),\n",
+       " (16, 80, 81, 17),\n",
+       " (17, 81, 82, 18),\n",
+       " (18, 82, 83, 19),\n",
+       " (19, 83, 84, 20),\n",
+       " (20, 84, 85, 21),\n",
+       " (21, 85, 86, 22),\n",
+       " (22, 86, 87, 23),\n",
+       " (23, 87, 88, 24),\n",
+       " (24, 88, 89, 25),\n",
+       " (25, 89, 90, 26),\n",
+       " (26, 90, 91, 27),\n",
+       " (27, 91, 92, 28),\n",
+       " (28, 92, 93, 29),\n",
+       " (29, 93, 94, 30),\n",
+       " (30, 94, 95, 31),\n",
+       " (31, 95, 96, 32),\n",
+       " (32, 96, 97, 33),\n",
+       " (33, 97, 98, 34),\n",
+       " (34, 98, 99, 35),\n",
+       " (35, 99, 100, 36),\n",
+       " (36, 100, 101, 37),\n",
+       " (37, 101, 102, 38),\n",
+       " (38, 102, 103, 39),\n",
+       " (39, 103, 104, 40),\n",
+       " (40, 104, 105, 41),\n",
+       " (41, 105, 106, 42),\n",
+       " (42, 106, 107, 43),\n",
+       " (43, 107, 108, 44),\n",
+       " (44, 108, 109, 45),\n",
+       " (45, 109, 110, 46),\n",
+       " (46, 110, 111, 47),\n",
+       " (47, 111, 112, 48),\n",
+       " (48, 112, 113, 49),\n",
+       " (49, 113, 114, 50),\n",
+       " (50, 114, 115, 51),\n",
+       " (51, 115, 116, 52),\n",
+       " (52, 116, 117, 53),\n",
+       " (53, 117, 118, 54),\n",
+       " (54, 118, 119, 55),\n",
+       " (55, 119, 120, 56),\n",
+       " (56, 120, 121, 57),\n",
+       " (57, 121, 122, 58),\n",
+       " (58, 122, 123, 59),\n",
+       " (59, 123, 124, 60),\n",
+       " (60, 124, 125, 61),\n",
+       " (61, 125, 126, 62),\n",
+       " (62, 126, 127, 63)]"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rim_el"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bebf19da13724fce9fc0ce1aa34b31d9",
+       "model_id": "0bd803548f0c4906b5be54a6024c71bc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -377,7 +505,11 @@
     "plotter.add_points(lv.get_virtual_node(\"MITRAL\"), color=\"green\", point_size=300)\n",
     "plotter.add_points(lv.get_virtual_node(\"AORTIC\"), color=\"red\", point_size=300)\n",
     "plotter.add_points(atr_rim, color=\"red\", point_size=300)\n",
+    "plotter.add_points(atr_rim_center, color=\"red\", point_size=300)\n",
+    "\n",
     "plotter.add_points(mtr_rim, color=\"green\", point_size=300)\n",
+    "plotter.add_points(mtr_rim_center, color=\"green\", point_size=300)\n",
+    "\n",
     "plotter.add_mesh(atr_rim_string_lines, color=\"red\", opacity=0.5, show_edges=False)\n",
     "plotter.add_mesh(mtr_rim_string_lines, color=\"green\", opacity=0.5, show_edges=False)\n",
     "plotter.add_mesh(lv.mesh, \n",
