added zoom and option to change x and y values (working on first chart)

--- a/notebooks/lv/tests/write_new_bcs.ipynb
+++ b/notebooks/lv/tests/write_new_bcs.ipynb
@@ -6,6 +6,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import matlab.engine\n",
+    "eng = matlab.engine.start_matlab()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eng.quit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import json\n",
     "from febio_python.feb import FEBio_feb\n",
     "import numpy as np"
@@ -145,7 +164,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
