working on better surface identification

--- a/notebooks/lv/logics/calc_fibers.ipynb
+++ b/notebooks/lv/logics/calc_fibers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c04b957508a84402a13c41885406454f",
+       "model_id": "e91d77099ffa40a296adc4050f990768",
        "version_major": 2,
        "version_minor": 0
       },
@@ -83,7 +83,7 @@
     "plotter.add_mesh(lv.mesh, \n",
     "                  cmap=\"Set2\", \n",
     "                  opacity=1.0, \n",
-    "                  show_edges=False,\n",
+    "                  show_edges=True,\n",
     "                  ambient=0.2, \n",
     "                  diffuse=0.5, \n",
     "                  specular=0.5, \n",
@@ -116,16 +116,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<project_heart.lv.left_ventricle.LV at 0x24003d9b370>"
+       "<project_heart.lv.left_ventricle.LV at 0x16e1a9ccdf0>"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +133,13 @@
    "source": [
     "import tetgen\n",
     "tet = tetgen.TetGen(lv.get_surface_mesh().triangulate())\n",
-    "tet.tetrahedralize(order=1, mindihedral=20, minratio=1.5)\n",
+    "tet.tetrahedralize(order=1, \n",
+    "                   nobisect=True,\n",
+    "                  #  quality=False,\n",
+    "                   mindihedral=100, \n",
+    "                   minratio=1.1,\n",
+    "                  #  steinerleft=-1\n",
+    "                   )\n",
     "lv_tet = LV()\n",
     "lv_tet.from_pyvista_dataset(tet.grid)\n",
     "lv_tet"
@@ -141,85 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "<table>\n",
-       "<tr><th>UnstructuredGrid</th><th>Information</th></tr>\n",
-       "<tr><td>N Cells</td><td>294073</td></tr>\n",
-       "<tr><td>N Points</td><td>59582</td></tr>\n",
-       "<tr><td>X Bounds</td><td>-3.948e+01, 3.455e+01</td></tr>\n",
-       "<tr><td>Y Bounds</td><td>-3.831e+01, 3.370e+01</td></tr>\n",
-       "<tr><td>Z Bounds</td><td>5.064e-02, 9.641e+01</td></tr>\n",
-       "<tr><td>N Arrays</td><td>0</td></tr>\n",
-       "</table>\n",
-       "\n"
-      ],
-      "text/plain": [
-       "UnstructuredGrid (0x24003d511c0)\n",
-       "  N Cells:\t294073\n",
-       "  N Points:\t59582\n",
-       "  X Bounds:\t-3.948e+01, 3.455e+01\n",
-       "  Y Bounds:\t-3.831e+01, 3.370e+01\n",
-       "  Z Bounds:\t5.064e-02, 9.641e+01\n",
-       "  N Arrays:\t0"
-      ]
-     },
-     "execution_count": 138,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tet.grid"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 140,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "<table>\n",
-       "<tr><th>UnstructuredGrid</th><th>Information</th></tr>\n",
-       "<tr><td>N Cells</td><td>294073</td></tr>\n",
-       "<tr><td>N Points</td><td>59582</td></tr>\n",
-       "<tr><td>X Bounds</td><td>-3.948e+01, 3.455e+01</td></tr>\n",
-       "<tr><td>Y Bounds</td><td>-3.831e+01, 3.370e+01</td></tr>\n",
-       "<tr><td>Z Bounds</td><td>5.064e-02, 9.641e+01</td></tr>\n",
-       "<tr><td>N Arrays</td><td>0</td></tr>\n",
-       "</table>\n",
-       "\n"
-      ],
-      "text/plain": [
-       "UnstructuredGrid (0x24003d511c0)\n",
-       "  N Cells:\t294073\n",
-       "  N Points:\t59582\n",
-       "  X Bounds:\t-3.948e+01, 3.455e+01\n",
-       "  Y Bounds:\t-3.831e+01, 3.370e+01\n",
-       "  Z Bounds:\t5.064e-02, 9.641e+01\n",
-       "  N Arrays:\t0"
-      ]
-     },
-     "execution_count": 140,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lv_tet.mesh"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -228,54 +156,7 @@
        "<table><tr><th>Header</th><th>Data Arrays</th></tr><tr><td>\n",
        "<table>\n",
        "<tr><th>PolyData</th><th>Information</th></tr>\n",
-       "<tr><td>N Cells</td><td>45098</td></tr>\n",
-       "<tr><td>N Points</td><td>22551</td></tr>\n",
-       "<tr><td>X Bounds</td><td>-3.948e+01, 3.455e+01</td></tr>\n",
-       "<tr><td>Y Bounds</td><td>-3.831e+01, 3.370e+01</td></tr>\n",
-       "<tr><td>Z Bounds</td><td>5.064e-02, 9.641e+01</td></tr>\n",
-       "<tr><td>N Arrays</td><td>2</td></tr>\n",
-       "</table>\n",
-       "\n",
-       "</td><td>\n",
-       "<table>\n",
-       "<tr><th>Name</th><th>Field</th><th>Type</th><th>N Comp</th><th>Min</th><th>Max</th></tr>\n",
-       "<tr><td>vtkOriginalPointIds</td><td>Points</td><td>int64</td><td>1</td><td>0.000e+00</td><td>5.903e+04</td></tr>\n",
-       "<tr><td>vtkOriginalCellIds</td><td>Cells</td><td>int64</td><td>1</td><td>0.000e+00</td><td>2.941e+05</td></tr>\n",
-       "</table>\n",
-       "\n",
-       "</td></tr> </table>"
-      ],
-      "text/plain": [
-       "PolyData (0x24003d51460)\n",
-       "  N Cells:\t45098\n",
-       "  N Points:\t22551\n",
-       "  X Bounds:\t-3.948e+01, 3.455e+01\n",
-       "  Y Bounds:\t-3.831e+01, 3.370e+01\n",
-       "  Z Bounds:\t5.064e-02, 9.641e+01\n",
-       "  N Arrays:\t2"
-      ]
-     },
-     "execution_count": 139,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lv_tet.get_surface_mesh()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 126,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table><tr><th>Header</th><th>Data Arrays</th></tr><tr><td>\n",
-       "<table>\n",
-       "<tr><th>UnstructuredGrid</th><th>Information</th></tr>\n",
-       "<tr><td>N Cells</td><td>68763</td></tr>\n",
+       "<tr><td>N Cells</td><td>43808</td></tr>\n",
        "<tr><td>N Points</td><td>21906</td></tr>\n",
        "<tr><td>X Bounds</td><td>-3.948e+01, 3.455e+01</td></tr>\n",
        "<tr><td>Y Bounds</td><td>-3.831e+01, 3.370e+01</td></tr>\n",
@@ -286,15 +167,15 @@
        "</td><td>\n",
        "<table>\n",
        "<tr><th>Name</th><th>Field</th><th>Type</th><th>N Comp</th><th>Min</th><th>Max</th></tr>\n",
-       "<tr><td>implicit_distance</td><td>Points</td><td>float64</td><td>1</td><td>-0.000e+00</td><td>-0.000e+00</td></tr>\n",
-       "<tr><td><b>EPI_ENDO</b></td><td>Cells</td><td>float64</td><td>1</td><td>1.000e+00</td><td>2.000e+00</td></tr>\n",
+       "<tr><td>vtkOriginalPointIds</td><td>Points</td><td>int64</td><td>1</td><td>0.000e+00</td><td>2.190e+04</td></tr>\n",
+       "<tr><td>vtkOriginalCellIds</td><td>Cells</td><td>int64</td><td>1</td><td>3.000e+00</td><td>6.638e+05</td></tr>\n",
        "</table>\n",
        "\n",
        "</td></tr> </table>"
       ],
       "text/plain": [
-       "UnstructuredGrid (0x24007d15fa0)\n",
-       "  N Cells:\t68763\n",
+       "PolyData (0x16e1a9c0100)\n",
+       "  N Cells:\t43808\n",
        "  N Points:\t21906\n",
        "  X Bounds:\t-3.948e+01, 3.455e+01\n",
        "  Y Bounds:\t-3.831e+01, 3.370e+01\n",
@@ -302,7 +183,46 @@
        "  N Arrays:\t2"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lv_tet.get_surface_mesh()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<table>\n",
+       "<tr><th>UnstructuredGrid</th><th>Information</th></tr>\n",
+       "<tr><td>N Cells</td><td>663889</td></tr>\n",
+       "<tr><td>N Points</td><td>121906</td></tr>\n",
+       "<tr><td>X Bounds</td><td>-3.948e+01, 3.455e+01</td></tr>\n",
+       "<tr><td>Y Bounds</td><td>-3.831e+01, 3.370e+01</td></tr>\n",
+       "<tr><td>Z Bounds</td><td>5.064e-02, 9.641e+01</td></tr>\n",
+       "<tr><td>N Arrays</td><td>0</td></tr>\n",
+       "</table>\n",
+       "\n"
+      ],
+      "text/plain": [
+       "UnstructuredGrid (0x16e1a9f9e80)\n",
+       "  N Cells:\t663889\n",
+       "  N Points:\t121906\n",
+       "  X Bounds:\t-3.948e+01, 3.455e+01\n",
+       "  Y Bounds:\t-3.831e+01, 3.370e+01\n",
+       "  Z Bounds:\t5.064e-02, 9.641e+01\n",
+       "  N Arrays:\t0"
+      ]
+     },
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,13 +233,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3c90488043e54f7796e7dcdc0df604ed",
+       "model_id": "302a4f139d4947fababede3122463a55",
        "version_major": 2,
        "version_minor": 0
       },
@@ -351,38 +271,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from project_heart.utils.vector_utils import *\n",
-    "# lvsurf = lv_tet.get_surface_mesh()\n",
-    "# pts = lvsurf.points\n",
-    "# # get surface Normals and get respective points-data\n",
-    "# lvsurf.compute_normals(inplace=True)\n",
-    "# surf_normals = lvsurf.get_array(\"Normals\", \"points\")\n",
-    "# # est geometry center\n",
-    "# center = np.mean(pts, axis=0)\n",
-    "# # get vector from pts at surface to center\n",
-    "# pts_to_center = center - pts\n",
-    "# # compute angle difference between surface normals and pts to center\n",
-    "# angles = angle_between(pts_to_center, surf_normals,\n",
-    "#        check_orientation=False)  # returns [0 to pi]\n",
-    "# # set initial endo-epi surface guess\n",
-    "# thresh = np.radians(90)\n",
-    "# endo_ids = np.where(angles < thresh)[0]\n",
-    "# epi_ids = np.where(angles >= thresh)[0]\n",
-    "# surf_to_global = lvsurf.point_data[\"vtkOriginalPointIds\"]\n",
-    "# tet_est_surfs = np.zeros(lv_tet.mesh.n_points)\n",
-    "# tet_est_surfs[surf_to_global[endo_ids]] = 1\n",
-    "# tet_est_surfs[surf_to_global[epi_ids]] = 2\n",
-    "# lv_tet.mesh.point_data[\"EPI_ENDO\"] = tet_est_surfs\n",
-    "# lv_tet.mesh = lv_tet.mesh.point_data_to_cell_data()"
+    "edges = lv_tet.get_surface_mesh().extract_feature_edges().extract_largest()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "190d8d89b87e44f686ab6e97d36d5d56",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Renderer(camera=PerspectiveCamera(aspect=1.3333333333333333, children=(DirectionalLight(color='#fefefe', inten…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "edges.plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eoi = edges.extract_largest().point_data[\"vtkOriginalPointIds\"]\n",
+    "eoi = set(eoi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[116754, 112350, 121078,  91199],\n",
+       "       [ 82763,  46998,  81104, 108277],\n",
+       "       [ 32086,  39890,  54455,  24201],\n",
+       "       ...,\n",
+       "       [108282,  98487, 116999, 121904],\n",
+       "       [ 16405,  47552,  36799,  16402],\n",
+       "       [121662,  57095,  57597,  48806]], dtype=int64)"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cells = lv_tet.cells()[10]\n",
+    "cells"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cell_map = np.ones(len(cells), dtype=np.int64)\n",
+    "cells_flat = cells.flatten()\n",
+    "for idx, cell in enumerate(cells_flat):\n",
+    "  if cell in eoi:\n",
+    "    cell_map[int(np.floor(idx/4))] = 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([116754, 112350, 121078, ...,  57095,  57597,  48806], dtype=int64)"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cells_flat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "cbf413d04e894986aeb3772bd0946274",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Renderer(camera=PerspectiveCamera(aspect=1.3333333333333333, children=(DirectionalLight(color='#fefefe', inten…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "lv_tet.mesh.cell_data[\"rids\"] = cell_map\n",
+    "lv_tet.mesh.set_active_scalars(\"rids\")\n",
+    "lv_tet.mesh.plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,75 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1, 1, 1, ..., 1, 1, 1], dtype=int64)"
-      ]
-     },
-     "execution_count": 82,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "domains = np.array(lv_tet.mesh.cell_data[\"EPI_ENDO\"])\n",
-    "domains[domains<=1.25] = 1.0\n",
-    "domains[domains>=1.75] = 2.0\n",
-    "# domains += 1\n",
-    "domains = domains.astype(np.int64)\n",
-    "domains"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1, 2], dtype=int64)"
-      ]
-     },
-     "execution_count": 83,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.unique(domains)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 84,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[19974, 20639, 17205, ...,  5445, 10643,  9663],\n",
-       "       [ 9985, 20577, 17208, ...,  5444, 10495, 20412],\n",
-       "       [19905, 20640,  3201, ..., 15159, 19951, 20504],\n",
-       "       [19906,  9530, 17206, ...,  5446, 19949,  9662]], dtype=int64)"
-      ]
-     },
-     "execution_count": 84,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tet_cells.T"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,7 +430,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.savetxt(\"regionIDs.csv\", cell_map, fmt='%i', delimiter=\",\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
