--- a/notebooks/lv/tests/boundary_conditions_test.ipynb
+++ b/notebooks/lv/tests/boundary_conditions_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,23 +19,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File: Full_Heart_Mesh_12.vtk\n"
+      "File: Full_Heart_Mesh_10.vtk\n"
      ]
     }
    ],
    "source": [
     "dir = Path(\"C:/Users/igorp/University of South Florida/Wenbin Mao - Igor/LV_Meshes/Heart_models\")\n",
     "# dir = Path(\"C:/Users/igornobrega/USF_Research/University of South Florida/Wenbin Mao - Igor/LV_Meshes/Heart_models\")\n",
-    "files = os.listdir(dir)\n",
+    "files = sorted(os.listdir(dir))\n",
     "\n",
-    "file_id = 3 # 5 has a problem\n",
+    "file_id = 1 # 5 has a problem\n",
     "\n",
     "print(\"File:\", files[file_id])\n",
     "\n",
@@ -45,13 +45,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cb44d93e05b14afcb08a1adf70fd1dc6",
+       "model_id": "8b079425136d430e845f9aceec154542",
        "version_major": 2,
        "version_minor": 0
       },
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,13 +134,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b34b0ca6742d41bebd202d06067d001b",
+       "model_id": "0f836639c7e04827ad6b5568ca4db030",
        "version_major": 2,
        "version_minor": 0
       },
@@ -180,13 +180,6 @@
     "plotter.enable_shadows()\n",
     "plotter.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
